add shadow option to indicator view

--- a/Example/BetterSegmentedControl/Base.lproj/Main.storyboard
+++ b/Example/BetterSegmentedControl/Base.lproj/Main.storyboard
@@ -95,6 +95,7 @@
                     <navigationItem key="navigationItem" id="uvX-Ri-xVg"/>
                     <connections>
                         <outlet property="control1" destination="LRg-26-sIB" id="bxZ-YG-SKf"/>
+                        <outlet property="control2" destination="aBR-d5-mUa" id="1Xy-yQ-grd"/>
                         <outlet property="control3" destination="s9Z-Wc-R9b" id="qPZ-T2-aZb"/>
                     </connections>
                 </viewController>
